add missing Depends: field for samba-tools
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba/experimental@2019 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/control
+++ b/debian/control
@@ -61,6 +61,7 @@ Description: Samba common files used by both the server and the client
 
 Package: samba-tools
 Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: tools provided by the Samba suite
  The Samba software suite is a collection of programs that
  implements the SMB/CIFS protocol for unix systems, allowing you to serve
