cifs.spnego is replaced by cifs.upcall
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2132 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/rules
+++ b/debian/rules
@@ -55,7 +55,8 @@ conf_args = \
 		--without-smbmount \
 		--with-dnsupdate \
 		--without-libtdb \
-		--without-libnetapi
+		--without-libnetapi \
+		--with-cifsupcall
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
   conf_args += \
