cifs.upcall should only be enabled on Linux archs; and should be installed in /usr/sbin
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2137 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/rules
+++ b/debian/rules
@@ -56,12 +56,11 @@ conf_args = \
 		--with-dnsupdate \
 		--without-libtdb \
 		--without-libnetapi \
-		--with-cifsupcall
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
   conf_args += \
 		--with-cifsmount \
-		--with-cifsspnego \
+		--with-cifsupcall \
 		--with-acl-support \
 		--with-quotas
   mount_cifs	= yes
