no renames for libwbclient, either
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2140 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/rules
+++ b/debian/rules
@@ -143,7 +143,7 @@ install: build
 	mv $(DESTDIR)/usr/lib/samba/libsmbclient* $(DESTDIR)/usr/lib/
 
 	# same problem with libwbclient.
-	mv $(DESTDIR)/usr/lib/samba/libwbclient.so $(DESTDIR)/usr/lib/libwbclient.so.0
+	mv $(DESTDIR)/usr/lib/samba/libwbclient* $(DESTDIR)/usr/lib/
 
 	# Install other stuff not installed by "make install"
 	install -m 0755 debian/mksmbpasswd.awk $(DESTDIR)/usr/sbin/mksmbpasswd
