--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Standards-Version: 3.8.0
 Package: samba
 Architecture: any
 Depends: samba-common (= ${binary:Version}), logrotate, ${shlibs:Depends}, ${misc:Depends}, libpam-runtime (>= 0.76-13.1), libpam-modules, lsb-base (>= 3.0-6), procps, update-inetd, adduser
-Suggests: openbsd-inetd | inet-superserver, smbldap-tools
+Suggests: openbsd-inetd | inet-superserver, smbldap-tools, ldb-tools
 Replaces: samba-common (<= 2.0.5a-2)
 Description: a LanManager-like file and printer server for Unix
  The Samba software suite is a collection of programs that
